# nietzche-sllm-project

./: .claudeignore  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
app/backend/: .env.example  BACKEND_STRUCTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/api/v1/: api.py
app/backend/core/: config.py  security.py
app/backend/db/: init_db.py  reset_db.py
app/backend/models/: __init__.py  chat.py  user.py
app/backend/prompts/: default.txt
app/backend/schemas/: chat.py  user.py
app/backend/services/: llm_client.py  llm_service.py  mock_data.py  user_service.py  vector_service.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: test_chat_api.py  test_user_api.py
app/backend/tests/unit/: test_models.py  test_schemas.py
ml/: ARCHITECTURE.md  README.md  pyproject.toml
ml/data_pipeline/: schema.py
ml/data_pipeline/alignment/: embedder.py  mapper.py  sentence_splitter.py
ml/data_pipeline/anchors/: gutenberg_parser.py
ml/data_pipeline/books/: joyful_science.py
ml/data_pipeline/extraction/: noise_filter.py  pdf_extractor.py
ml/data_pipeline/preprocessing/: marker_adapter.py  page_extractor.py
ml/data_pipeline/segmentation/: aphorism_segmenter.py  section_detector.py
ml/docs/: AGENTS.md  ARCHITECTURE.md  DATA_SPEC.md  ENVIRONMENTS.md  HANDOFF_PROMPT.md  LLM_ONBOARDING.md  PIPELINE.md  RESULTS.md  SFT_STRATEGY.md  pipeline.md
ml/docs/stage_cards/: stage2_card.md  stage3_card.md  stage4_card.md
ml/finetune/: pyproject.toml  setup.sh
ml/finetune/data/: train.jsonl
ml/finetune/outputs/stage_b/: responses.jsonl  (+1 more)
ml/finetune/scripts/: merge_one.py  run_judge_server.sh  run_stage_b.sh  stage_b_generate.py  stage_b_stats.py  stage_c_analyze.py  stage_c_report.py  stage_c_score.py  test_a_vllm_baseline.py  test_b1_merge_epoch1.py  test_b1_merge_epoch1_unsloth.py  test_b2_vllm_merged.py  train.py  upload_lora.py
ml/rag/: requirements.txt
ml/rag/data/: interp_tsz_p1_prologue.jsonl  orig_tsz_p1_prologue.jsonl
ml/rag/scripts/: index_corpus.py  rag_pipeline.py  search_test.py
ml/scripts/: 00_preprocess.py  01_extract.py  02_segment.py  03_segment_chunks.py  04_map_anchor.py  04a_parse_english.py
ml/sft_pipeline/prompts/: nietzsche_sft_prompt_v9_3.md
ml/v2_data/english_chunks/: bge.jsonl  eh.jsonl  gm.jsonl  gs.jsonl  ti.jsonl
ml/v2_data/english_raw/: beyond-good-and-evil.txt  ecce-homo.txt  the-genealogy-of-morals.txt  the-joyful-wisdom.txt  the-twilight-of-the-idols.txt
ml/v2_data/filtered/: bge.jsonl  eh.jsonl  gm.jsonl  gs.jsonl  ti.jsonl
ml/v2_data/reconstructed/: bge.jsonl  eh.jsonl  gm.jsonl  gs.jsonl  ti.jsonl
ml/v2_data/sft_candidates/: candidates.jsonl  cleaned.jsonl  cleaned_report.json  dedup_report.json  scored_report.json
ml/v2_data/sft_dataset/: eval.jsonl  select_report.json
ml/v2_pipeline/: REFACTOR_PLAN.md  english_chunker_bge.py  english_chunker_eh.py  english_chunker_gm.py  english_chunker_gs.py  english_chunker_ti.py  glossary.md  reconstructor.py  sft_generator.py  stage_a_clean.py  stage_a_dedup.py  stage_a_score.py  stage_a_select.py  track_filter.py  verify_chunks.py
ml/v2_pipeline/prompts/: reconstruction.txt
ml/v2_pipeline/scripts/: test_reconstruct.py
(+169 files in other folders)
