[tool.poetry]
name = "nietzsche-data-pipeline"
version = "0.1.0"
description = "Nietzsche sLLM data preprocessing pipeline"
authors = ["HwangChulHee"]
readme = "README.md"
packages = [{include = "data_pipeline"}]

[tool.poetry.dependencies]
python = "^3.12"
# PDF 추출
pymupdf = "^1.24.0"
# 데이터 검증 / 스키마
pydantic = "^2.7.0"
# 진행 표시 / 예쁜 로그
tqdm = "^4.66.0"
rich = "^13.7.0"
# 환경 변수
python-dotenv = "^1.0.0"
# LLM 클라이언트 (vLLM/Ollama OpenAI 호환 API)
openai = "^1.30.0"
# HTTP 요청
httpx = "^0.27.0"
marker-pdf = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length는 ruff format에서 처리

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]